<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="74dp"
        android:layout_weight="0.94"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/le_name"
                android:textColor="#818181"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tx_lec_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/le_name_tv"
                android:textColor="#818181"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/le_teacher"
                android:textColor="#818181"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tx_lec_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/le_teacher_tv"
                android:textColor="#818181"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:singleLine="true"
                android:text="@string/le_place"
                android:textColor="#818181"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tx_lec_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/le_place_tv"
                android:textColor="#818181"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/le_time"
                android:textColor="#818181"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tx_lec_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/le_time_tv"
                android:textColor="#818181"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>