<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.79"
            android:gravity="top|left"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_re_back"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:background="@drawable/back_n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visonnum"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_vison"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dip"
            android:text="@string/vison"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_check_update"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginBottom="12dip"
            android:background="@drawable/img_check_update"
            android:text="@string/checkupdata"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:gravity="bottom"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:id="@+id/seehdu_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/linearlayout_selsector"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dip"
                    android:contentDescription="@null"
                    android:src="@drawable/img_info_outline_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:text="@string/seehduintro"
                    android:textColor="#818181"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/people_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/linearlayout_selsector"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dip"
                    android:contentDescription="@null"
                    android:src="@drawable/img_people_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:text="@string/peopleintro"
                    android:textColor="#818181"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feedback_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/linearlayout_selsector"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dip"
                    android:contentDescription="@null"
                    android:src="@drawable/img_feedback_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:text="@string/advice"
                    android:textColor="#818181"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bug_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/linearlayout_selsector"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dip"
                    android:contentDescription="@null"
                    android:src="@drawable/img_bug_report_black_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:text="@string/bugfeedback"
                    android:textColor="#818181"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/linearlayout_selsector"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks"
                    android:textColor="#818181"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CopyRight"
                    android:textColor="#818181"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>