<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4caf50"
        >
      <Button
        android:id="@+id/btn_fixpasd_back"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="@drawable/back_n" />

    <TextView
        android:id="@+id/tv_fixpsd_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="设置"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:typeface="monospace" />
    
</LinearLayout>
    <EditText
        android:id="@+id/ed_fixpsd_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/set_fixpsd_sure"
        android:singleLine="true" 
        android:padding="10dp"
        android:layout_marginTop="10dp"
        >

        <requestFocus />
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dip"
        android:background="@drawable/base_horization_line" />

    <EditText
        android:id="@+id/ed_fixpsd_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/set_fixpsd_new"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dip"
        android:background="@drawable/base_horization_line" />

    <Button
        android:id="@+id/btn_fixpsd_ok"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_fixpsd_ok" />

</LinearLayout>